2009-11-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Correct module naming.

	* video/efi_uga.c (GRUB_MOD_INIT(efi_fb)): Renamed from this ...
	(GRUB_MOD_INIT(efi_uga)): ... to this
	(GRUB_MOD_FINI(efi_fb)): Renamed from this ...
	(GRUB_MOD_FINI(efi_uga)): ... to this
	* video/efi_gop.c (GRUB_MOD_INIT(efi_fb)): Renamed from this ...
	(GRUB_MOD_INIT(efi_gop)): ... to this
	(GRUB_MOD_FINI(efi_fb)): Renamed from this ...
	(GRUB_MOD_FINI(efi_gop)): ... to this

2009-11-28  Robert Millan  <rmh.grub@aybabtu.com>

	* util/mkisofs/mkisofs.c (ld_options): Mark all `arg' strings as
	translatable.
	(usage): Translate `arg' strings using gettext().
	Thanks to Jordi Mallach for the suggestion.

2009-11-28  Vladimir Serbinenko  <phcoder@gmail.com>

	GOP support. Based on patch from Bean
	(http://lists.gnu.org/archive/html/grub-devel/2009-08/msg00384.html)

	* video/efi_gop.c: New file.
	* include/grub/efi/graphics_output.h: Likewise.
	* conf/i386-efi.rmk (pkglib_MODULES): Add `efi_gop.mod'.
	(efi_fb_mod_SOURCES, efi_fb_mod_CFLAGS, efi_fb_mod_LDFLAGS): New
	variables.
	* conf/x86_64-efi.rmk: Likewise.

2009-11-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Rename efi_fb to efi_uga.

	* conf/i386-efi.rmk (pkglib_MODULES): Rename 'efi_fb.mod' to
	'efi_uga.mod'.
	(efi_fb_mod_SOURCES): Rename this ...
	(efi_uga_mod_SOURCES): ... to this.
	(efi_fb_mod_CFLAGS): Rename this ...
	(efi_uga_mod_CFLAGS): ... to this.
	(efi_fb_mod_LDFLAGS): Rename this ...
	(efi_uga_mod_LDFLAGS): ... to this.
	* conf/x86_64-efi.rmk (pkglib_MODULES): Rename 'efi_fb.mod' to
	'efi_uga.mod'.
	(efi_fb_mod_SOURCES): Rename this ...
	(efi_uga_mod_SOURCES): ... to this.
	(efi_fb_mod_CFLAGS): Rename this ...
	(efi_uga_mod_CFLAGS): ... to this.
	(efi_fb_mod_LDFLAGS): Rename this ...
	(efi_uga_mod_LDFLAGS): ... to this.
	* video/efi_fb.c: Move this ...
	* video/efi_uga.c: ... to this. Change prefix to 'grub_video_uga_'.

2009-11-27  Robert Millan  <rmh.grub@aybabtu.com>
