@@ -1,3 +1,9 @@
+2009-11-29  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	Fix GNU/Hurd grub-install crash.
+	* util/grub-probe.c (probe): Try to access `path' only when it is not
+	NULL.
+
 2009-11-28  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Correct module naming.
